fixed the spacing

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     display: block;
     border: 6px;
     margin: auto;
+    margin-top: 15px;
     border-radius: 2px;
     padding: 15px;
     background-color: #FFF;
